log
Wed 08 May 2024 06:14:34 PM UTC: 
 tests:  1|8
total_score: 0/70
856021f
Wed 08 May 2024 06:19:01 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d3ba36
Wed 08 May 2024 06:19:22 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
4b2ff65
Wed 08 May 2024 06:24:17 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:27: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         aux = nextTreeMap(aux);
      |                           ^~~
      |                           |
      |                           TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
In file included from test.c:4:
treemap.c:81:13: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   81 |         aux = nextTreeMap(aux);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
98f7f8f
Wed 08 May 2024 06:24:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:21: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         nextTreeMap(aux);
      |                     ^~~
      |                     |
      |                     TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
49487c8
Wed 08 May 2024 06:26:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:21: error: initialization of ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   77 |     TreeNode *aux = firstTreeMap(tree);
      |                     ^~~~~~~~~~~~
treemap.c:80:15: error: ‘TreeNode’ has no member named ‘key’
   80 |         if(aux-> key == key) return aux;
      |               ^~
treemap.c:80:37: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   80 |         if(aux-> key == key) return aux;
      |                                     ^~~
treemap.c:81:21: error: passing argument 1 of ‘nextTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   81 |         nextTreeMap(aux);
      |                     ^~~
      |                     |
      |                     TreeNode *
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:23:30: note: expected ‘TreeMap *’ but argument is of type ‘TreeNode *’
   23 | Pair * nextTreeMap(TreeMap * tree);
      |                    ~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
a5d2335
Thu 09 May 2024 12:26:57 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
7246382
Thu 09 May 2024 12:28:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ace1ed1
